Implement API request signing flow from Postman pre-script
- Add ApiSigner utility for MD5, HMAC-SHA256, canonical URL signing
- Create ApiSigningInterceptor for RestTemplate integration
- Configure signed RestTemplate as global default with @Primary
- Add RestTemplateSigningTest with MockRestServiceServer
- Fix MapStruct/Lombok conflicts in BookingMapper and pom.xml
- Fix enum parsing in TestRegistrationController with validation
- Replace deprecated @GenericGenerator with bean-based ID generators
- Add IdGeneratorConfig for all custom prefixed generators
- Update Vehicle entity with status enum and full fields
- Update TestTask entity field names (authorizationDate->authorizationTime, etc.)
- Recreate BookingMapper with proper mappings and status name methods
- All Maven tests pass successfully